<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/pages"
        android:checkableBehavior="none">
        <item
            android:id="@+id/tip"
            android:icon="@drawable/baseline_priority_high_24"
            android:title="@string/tip_for_manual_detection" />

    </group>

    <group
        android:id="@+id/pages2"
        android:checkableBehavior="none">

        <item
            android:id="@+id/privacy_policy"
            android:icon="@drawable/baseline_sticky_note_2_24"
            android:title="@string/privacy_policy" />

        <item
            android:id="@+id/rate_us"
            android:icon="@drawable/baseline_star_rate_24"
            android:title="@string/rate_us" />

    </group>

    <group
        android:id="@+id/pages3"
        android:checkableBehavior="none">

        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_domain_black_24dp"
            android:title="@string/about_us" />
    </group>

    <group
        android:id="@+id/pages4"
        android:checkableBehavior="none">
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/baseline_assignment_return_24"
            android:title="@string/sign_out" />
    </group>

</menu>