<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navBar.ManualAuthenticationFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:text="@string/where_are_you_now"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/bedroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bedroom" />

        <RadioButton
            android:id="@+id/bathroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bathroom" />

        <RadioButton
            android:id="@+id/changing_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changing_room" />

        <RadioButton
            android:id="@+id/outside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outside" />
    </RadioGroup>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />
</androidx.constraintlayout.widget.ConstraintLayout>