<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AboutFragment">

    <TextView
        android:id="@+id/about_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/contact_us"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                android:textStyle="bold"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/postal_address"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_label" />

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/phone"
                android:textColor="@color/red"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:text="@string/phone_number"
                android:linksClickable="true"
                android:autoLink="phone"
                android:textColorLink="@color/colorBlue"
                android:textColor="@color/red"
                app:layout_constraintBaseline_toBaselineOf="@+id/phone_label"
                app:layout_constraintStart_toEndOf="@+id/phone_label" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/phone_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autoLink="email"
                android:text="@string/emailID"
                android:textColorLink="@color/colorBlue"
                android:linksClickable="true"
                android:layout_marginStart="16dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/email_label"
                app:layout_constraintStart_toEndOf="@+id/email_label" />

            <TextView
                android:id="@+id/website_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/website"
                android:textStyle="bold"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_label" />

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:autoLink="web"
                android:textColorLink="@color/colorBlue"
                android:linksClickable="true"
                android:text="@string/website_address"
                app:layout_constraintBaseline_toBaselineOf="@+id/website_label"
                app:layout_constraintStart_toEndOf="@+id/website_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>